--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@tanstack/react-query": "^5.65.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.28",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-paper": "^5.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
