--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@tanstack/react-query": "^5.65.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.28",
-    "expo-status-bar": "~2.0.1",
-    "expo-updates": "~0.26.13",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2.22.1",
+    "expo": "^53.0.0",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.13.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@types/react": "~18.3.12",
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.0.10",
     "react-native-dotenv": "^3.4.11",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
